@@ -1,3 +1,7 @@
+[B][COLOR=FF56ADDA]v4.4.5[/COLOR][/B]
+• Fixed: NextUp still there dialog swapped episode/season labels
+• Added: Video/music genre icons (more icons/options will come). Requires Extrapack refresh
+
 [B][COLOR=FF56ADDA]v4.4.4a[/COLOR][/B]
 • Fixed: Broken NetFilx landscape thumbs
 
